welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:4: error: type mismatch;
 found   : Boolean
 required: Int
	if (nums(x)>=3) {
                 ^arrayFront9:6: error: reassignment to val
			if (nums(x)==9) x=true
                                         ^