welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.code
def arrayFront9(nums:Array[Int]): Boolean = {
	var x:Boolean=false;
	
	if (nums(x)>=3) {
		for (x<-0 to 3) {
			if (nums(x)==9) x=true
		}
	}
	return x
}
